--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <option value="0.2">20%</option>
         </select>
 
+        <button class="count">Oblicz</button>
+        <p class="error"></p>
+        <p class="cost-info">Powinniście się złozyć po <span class="cost"></span> zł 😉</p>
 
 
     </div>
