--- a/index.html
+++ b/index.html
@@ -19,25 +19,26 @@
             <h1>BillSplitter</h1>
             <p>Podziel się rachunkiem ze znajomymi! ;)</p>
         </div>
-        <div class="bottom"></div>
-        <label for="price">Kwota do zapłaty:</label>
-        <input type="number" id="price">
+        <div class="bottom">
+            <label for="price">Kwota do zapłaty:</label>
+            <input type="number" id="price">
 
-        <label for="people">Ilość osób:</label>
-        <input type="number" id="people">
+            <label for="people">Ilość osób:</label>
+            <input type="number" id="people">
 
-        <label for="tip">Napiwek</label>
-        <select id="tip">
-            <option value="0" disabled selected>-wybierz napiwek-</option>
-            <option value="0.05">5%</option>
-            <option value="0.1">10%</option>
-            <option value="0.15">15%</option>
-            <option value="0.2">20%</option>
-        </select>
+            <label for="tip">Napiwek</label>
+            <select id="tip">
+                <option value="0" disabled selected>-wybierz napiwek-</option>
+                <option value="0.05">5%</option>
+                <option value="0.1">10%</option>
+                <option value="0.15">15%</option>
+                <option value="0.2">20%</option>
+            </select>
 
-        <button class="count">Oblicz</button>
-        <p class="error"></p>
-        <p class="cost-info">Powinniście się złozyć po <span class="cost"></span> zł 😉</p>
+            <button class="count">Oblicz</button>
+            <p class="error"></p>
+            <p class="cost-info">Powinniście się złozyć po <span class="cost"></span> zł 😉</p>
+        </div>
 
 
     </div>
